--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -7,13 +7,13 @@
 }
 
 .container {
-  display: flex;
+  display: grid;
   flex-direction: column;
   justify-content: space-between;
   background: #FFFFFF;
   border-radius: 8px;
-  height: 60%;
-  width: 35%;
+  height: 70%;
+  width: 25%;
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
@@ -22,8 +22,8 @@
   }
 
   .container {
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
   }
 }
 
